tests/errors/scope.cfa
// Keep harmonized with errors/scope.

#ifdef OMIT_DRIVING_REJECTIONS
// For manual sanity checking:
// Leave out the offensive declarations and verify that what's left is accepted.
#define EXPREJ(...)
#else 
#define EXPREJ(...) __VA_ARGS__
#endif


        int thisIsAnError;
EXPREJ( int thisIsAnError; )

        int thisIsNotAnError;
        float thisIsNotAnError;

        int thisIsAlsoNotAnError() {
          int thisIsNotAnError;
        }

        int thisIsAlsoNotAnError( double x ) {
        }

        double thisIsStillNotAnError( double );
        double thisIsStillNotAnError( double );

        double butThisIsAnError( double ) {
        }
EXPREJ(
        double butThisIsAnError( double ) {
        }
)

// Local Variables: //
// tab-width: 4 //
// End: //
